# forgeryscope

./: .gitignore  LICENSE  README.md  SOLUTION.md  pyproject.toml
examples/: quick_start.ipynb
forgeryscope/: __init__.py  model_zoo.py
forgeryscope/detector/: __init__.py  yolo.py
forgeryscope/embedder/: __init__.py  torch.py
forgeryscope/matcher/: __init__.py  geometry.py  lane.py  lightglue.py  plot.py
