[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forgeryscope"
version = "0.0.3"
description = "Tools for the competition"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Uladzislau Leketush", email = "vlad.leketush@gmail.com"}
]

dependencies = [
    "torch>=1.9.0",
    "torchvision>=0.10.0",
    "numpy>=1.19.0",
    "Pillow>=8.0.0",
    "opencv-python>=4.5.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "ultralytics>=8.0.0",
    "timm>=0.6.0",
    "albumentations>=1.0.0",
    # "lightglue>=0.1.0",
    "shapely>=1.8.0",
    "scikit-image>=0.18.0",
]
